squished a bug

--- a/client/main.scss
+++ b/client/main.scss
@@ -1,7 +1,7 @@
-$yellow: black;
+$variable-color: black;
 
 body {
   padding: 10px;
   font-family: sans-serif;
-  color: $black;
+  color: $variable-color;
 }
